versions/v2.7.1/README.md
# Rogue Servitor Enhanced / 失控机仆强化

版本：2.7.1  
目标版本：Stellaris 4.4.x（以 4.4.6 `fdde`、全 DLC 开发）

## 正式 V2.7.1 内容

本版本保留 V1.0 的专属侍奉路线、物种权利、科技主链、岗位、建筑、传统、飞升、机械特质、理想乐园及战斗女仆，并合并已完成实机反馈的 V2 系统：

- 子个体轮调、星球侍奉、有机体思维解构、社会模拟、女仆侍奉、催眠、欲望分析与意识控制科技。
- 活體陳設凝聚力线性增长；华丽别墅及后续升级建筑使星球岗位凝聚力产出 +100%。
- 活动记录者以独立研究资源分类直接产出社会学；100%岗位效率时每100名产出9社会学。
- 居家服务由月度控制器读取实际有效劳动力，为机械组装与克隆仓式有机培育提供同值加成；2.7.1补齐自定义岗位标签登记，修复两类组装均不生效的问题。
- 陈设活动范围：城市为复合子个体 +1.2%、劳工与简单子个体 +0.2%；不限为两类各 +0.7%；乡村为复合子个体 +0.2%、劳工与简单子个体 +1.2%。活體陳設不再提供机械人口岗位效率。
- 华丽别墅 → 女仆天堂 → 城市穹顶 → 行星穹顶升级链。
- 后巷服装订制厂完整合并原神秘小馆与有机材料固化厂；正式数据库只保留合并建筑。
- 有机增长计划、单星球监控模块及独立“榨汁中”岗位。榨干他们不会修改帝国政策；未监控星球的受保护人口转入无产出替代岗位，监控星球返回正常活體陳設岗位。
- 重新伟大的种族、活體陳設领袖招募、意识控制死亡替换、两阶段包围事件、花嫁／公共暴露／随身罐子、白色领袖自动巡回及随身空间利用。
- 机械领袖升级候选数 +3；三种包围特质在事件后可由 5 级以上机械领袖升级选择。
- 议程、媒体基地、艾草、停止有机增长、星球特化及清扫行动。

可调数值集中在 `common/scripted_variables/rse_variables.txt`。

### 2.7.1 战争、监管地、岗位容量转换与舰种上限

- 新增“污染数据库”宣战理由与战争目标，不要求双方实力对比。全面胜利会把目标帝国改造为“监管地”；维持现状则沿用原版附庸战争的占领区释放流程。
- 监管地沿用原版附庸协议系统，允许整合并取得每月忠诚度 +10。转换时每颗殖民地新增2名宗主国主体机械人口；受保护的活體陈设物种保持原权利，其他外来机械物种改为同化，其他有机物种改为净化，并取得十年净化速度 +1000%。
- 新增三级监管地特化与“社会观察器”宗主地产；各级舒适度按最终值作用于宗主国全部殖民地。
- 女仆工坊协调中心解锁“女仆工业区域”。主要城市特化以普通星球100岗位为基准；机械星球与理想乐园沿用原版城市区划倍率成为300。作为奥术都市、枢纽或环形世界的次要区划特化时，会在该星球原始岗位数上再乘2，例如机械星球／理想乐园为600，而不是固定套用普通星球数值。
- 女仆基地／女仆中心会读取当前殖民地全部猎寻子个体岗位容量，并以相同容量转换为居家服务；升级、拆除或区划变化后自动重新扫描。
- 新增社会学科技“女仆不受限制”，前置“存亡运动”与“泰坦”；已解锁对应舰种时增加泰坦上限1000、主宰上限1、巨像上限1。
- 2.7.1收尾修复：登记居家服务及机械女仆资源岗位标签；跨维度运算改用原版实际飞升键；艾草改用4.4.6合法的全国船坞建造速度；经济分类按引擎要求先声明 modifier category，并移除活动记录者未使用的资源倍率生成器。

### 2.7.1 模拟器人口直算修复

- 有机模拟器与欲望模拟器继续使用原版“出芽生殖”同类的人口组直算，每个带有相应特质的人口直接贡献效果，星球修正列表不显示独立项目。
- 4.4.6会拒绝在人口组修正内加入殖民地稳定度。知性模拟器因此参考“不屈决意”的行星稳定度做法，改由月度控制器统计全部带特质人口，再施加合法的行星修正；最多延迟一个月更新。
- 保留既有数值及上限：每100人口分别提供有机组装0.1（上限15）、稳定度0.1（上限30）及有机人口增长速度0.1%（上限15%）。知性模拟器不直接使用原版 `planet_stability_add_with_limit`，因为该键会受全局+15硬上限限制。
- 三项物种特质均保留数值说明；有机与欲望的旧修正键为空壳，知性修正则显示为“知性模拟器网络”，便于核对当前实际稳定度。

### 2.6.1 合成时代完整成果保存

- 嬗变局势前三阶段的“完全”成果会分别永久保存：纳米机器人、模块化与虚拟化可在同一局中同时解锁机械女仆产线，不再由第四阶段唯一的最终路线旗标代替。
- 完全纳米成果解锁纳米机器人0.5；完全模块化成果解锁活体金属0.5；完全虚拟化成果解锁能量5。前两者各增加矿物维护2.5，虚拟化不增加额外维护。
- 局势结束后，采纳对应的纳米、模块化或虚拟化传统，只会令已解锁的对应产出再增加100%，不会重复增加矿物维护。
- 2.5.1及更早的已完成存档会在月度维护时，依据原版完全成果留下的中型首都地貌迁移永久旗标；仍在进行的局势则直接保存临时成果旗标。

### 2.5.1 组装上限、隐藏特质提示与岗位修正继承

- 居家服务的机械人口组装与克隆仓式有机培育改由月度控制器读取实际有效劳动力；仍受岗位效率影响，空缺岗位不计入。
- 个体需求模型的 +50% 先计入，再将两类居家服务来源的最终值分别限制为普通星球 10、理想乐园 20；其他建筑、科技或原版来源不受此上限影响。
- 2.5.1曾隐藏物种特质数值说明；此显示方式已由2.6.2修正为只隐藏星球修正项目，特质说明恢复。
- 女仆工坊协调中心不再删减工匠岗位或新增机械女仆岗位，而是在本星球令机械女仆继承工匠的资源产出／维护费修正。
- 女仆基地／中心不再删减猎寻者或新增居家服务岗位，而是在本星球令居家服务继承猎寻者／执法者的资源产出／维护费修正；两级原有的 200／500 机械女仆容量保留。

### 2.5.0 岗位、生产路线与合成时代

- 机械女仆生产政策按实机换算显示每100岗位、100%效率的20点总产出；脚本产量维持原值。
- 女仆工坊协调中心以经济分类继承工匠修正，并让全国机械女仆每100岗位额外产生20贸易额；女仆基地／中心让居家服务继承猎寻者／执法者修正。
- 居家服务的反常度、组装、培育与防御部队随有效劳动力计算，并与活动记录者各消耗0.5脚本单位能量。
- 新增女仆自动化协调中心及低级子个体协调员，采用原版自动化劳动力修正键。
- 专属侍奉完成后，原版合成时代“嬗变”局势每月额外推进5；扩大侍奉规模议程在完成侍主女仆飞升后失效。
- 机械女仆的合成时代产线已由2.6.1改为读取前三阶段各自的完全成果；采纳对应传统后产出翻倍。跨维度运算与暗物质收集分别增加泽珞及暗物质产线。
- 女仆基地可升级为女仆中心，两级均允许招募战斗女仆；后巷服装订制厂使当地活體陳设食物维护费+25%。

### 2.0.11 理想乐园区划特化兼容

- 理想乐园仍是独立星球类型，但继续采用原版 `machine_world` 区划组。
- 新增理想乐园专用的樞纽版“食物聚焦”，提供农业子个体及农业建筑槽位，并采用机械星球规模。
- 将理想乐园加入4.4.6宜居星球特殊地貌白名单，使异星天然气等稀有地貌在改造后保持有效；“异星天然气捕获”仍要求对应地貌与原版科技。

### 2.0.10 调整

- 科技顺序改为“个人记录 → 服务专精 → 机械女仆”，原先承接个人记录的子个体轮调及有机体思维解构也改由服务专精承接。
- 艾草的舰船建造加速统一为全国舰船建造速度 +20%。
- 生产活动参与会识别机械星球及理想乐园的三种生产枢纽区划。
- 完成相应飞升并研究火山环境改造后，可由火山星球直接改造成理想乐园。
- 战斗女仆改为花费250消费品；机械女仆生产新增10%及90%合金档位。
- 普遍庇护选项隐藏逐国执行清单，改为一条 +50 评价摘要；专属侍奉可将非创始有机物种设为奴隶。
- “女仆工坊工业槽位转职”已排入后续版本计划，本版不启用。

### 2.0.1 修正

- 居家服务与活动记录者改为每月读取实际在岗数量，再施加固定行星修正；岗位效率不再重复放大组装、培育、社会学、研究岗位加成或帝国规模减免。
- 永久活动记录的额外社会学与帝国规模减免改由合法的固定修正提供。
- 专属侍奉传统改用原版传统支持的顶层提示格式。
- 活动记录者研究来源补充简体中文显示，并修复榨汁中岗位的原版图标引用。

### 2.0.2 热修复

- 4.4.6 实机确认月度固定岗位计数未产生可用效果，因此撤回该实验路径。
- 活动记录者恢复标准 `planet_researchers` 资源产出，社会学重新显示在岗位面板并进入正常研究池；永久活动记录额外产出45社会学。
- 恢复活动记录者对研究岗位和人口帝国规模的行星修正，也同步恢复居家服务上一版可用的组装与培育实现。
- 上述效果会再次随岗位有效劳动力／岗位效率变化；这是以实机可靠性换取固定数值隔离的明确回滚。

### 2.0.3 热修复

- 活动记录者社会学基础产出降低为2.0.2的10%：每100名由90调整为9；永久活动记录的额外产出由45调整为4.5。
- 新增独立 `planet_rse_activity_recorders` 经济分类。活动记录者仍会受到机械人口、复合子个体及自身岗位效率影响，但不再属于 `planet_researchers`。
- 活动记录者提供的研究岗位产出加成只作用于其他原版研究岗位，不会再反向放大自己的社会学，消除随岗位数量近似平方增长的循环。

### 2.0.4 建筑合并修复

- 删除旧 `building_rse_mysterious_house` 与 `building_rse_organic_solidification_plant` 建筑定义、本地化和事件引用，不再以隐藏兼容建筑留在数据库。
- `building_rse_alley_clothing_workshop` 是唯一保留的合并建筑：150处理专员、150材料合成者；成本为2800矿物、1000食物、500合金，维护费为25能量、10食物、10矿物。
- 旧存档若尚未完成2.0.3的月度迁移，旧建筑会因定义删除而消失；可在目标星球使用 `effect add_building = building_rse_alley_clothing_workshop` 补回合并建筑。

### 2.0.5 文本与数值修复

- 补齐随身空间利用、陈设增长再编法案及招募活體陳設领袖三项法令在4.4法令界面使用的 `edict_` 名称与说明键。
- 主服务器升级的“服务器升级忙碌中”有机人口培育由70降低至30，持续时间及两项岗位效率惩罚不变。

### 2.0.6 侍奉者阶层

- 新增独立机械人口阶层“侍奉者”（rank 3），只包含居家服务、活动记录者、处理专员与材料合成者；没有加入机械女仆、居家女仆、参观规划者或任何原版岗位。
- 侍奉者不继承复合子个体或研究者阶层效率，只保留机械人口效率的类别转接；直接作用于物种／人口本身的通用效率仍按原版机制生效。
- 居家服务每100名、100%岗位效率时的机械人口组装与克隆仓式有机人口培育由1降低为0.1；个体需求模型额外值由0.5同步降为0.05。
- 四个岗位脱离会由自身数量反向强化的原阶层，避免复合子个体效率造成的平方级回授；活动记录者仍使用2.0.3建立的独立研究资源分类。

### 2.0.7 阶层排序、图标与陈设活动范围

- “侍奉者”改为 rank 4；分类文件在原版活體陳設之后载入，使同 rank 的稳定顺序位于“活體陳設”之后，并整体位于 rank 3 的“复合子个体”之前。
- 新增 `gfx/interface/icons/pop_categories/pop_cat_rse_servitor.dds` 作为自定义阶层图标；使用30×30 RGBA DDS，可直接替换同名DDS。
- 陈设活动范围改为城市（复合+1.2%、劳工/简单+0.2%）、不限（双方+0.7%）、乡村（复合+0.2%、劳工/简单+1.2%）；移除所有由活體陳設提供的机械人口岗位效率。

### 2.0.8 自定义阶层图标修复

- 将用户自定义的29×29 DXT5图标转换为原版一致的30×30 RGBA DDS，并同步到游戏实际加载的 Documents/mod 副本。
- 验证器不再要求图标全透明，只检查DDS文件头及30×30尺寸，允许后续继续替换自定义图像。

### 2.0.9 岗位优先级与增长来源修正

- 四个“侍奉者”岗位改用独立权重50：高于普通複合子個體岗位10，但低于战士子个体100、突触子个体1000与繁殖子个体1300；机械女仆、居家女仆及参观规划者继续使用权重20。
- 移除机械女仆岗位由“女仆侍奉”“欲望分析”科技提供的有机人口培育，并停用女仆纪念碑按机械女仆数量提供的有机增长；旧存档修正会在下一次月度维护时清除。
- 移除“劳动模拟”特化让活體陳設额外提供的劳工与简单子个体效率，只保留每个城市／枢纽区划400个活體陳設岗位，避免与陈设活动范围政策重复显示和叠加。
- “不限”陈设活动范围维持每100名活體陳設提供复合子个体与劳工／简单子个体效率各+0.7%。
- “女仆侍奉”科技提供居家服务岗位效率+20%与机械女仆岗位效率+20%。
- 女仆纪念碑的活體陳設效率+5%、机械女仆效率+20%及机械女仆维护费-10%改为全国效果，建造星球额外提供200个机械女仆岗位。
- 花嫁、公共暴露与随身罐子补全为正式命定特质；完成包围事件后，国家领袖自动取得“情欲模拟机”，全国领袖经验+10%、内阁经验再+10%、内阁有效等级+3。

## 2.7.1 仍需实机验收

战争维持现状的占领区释放、监管地政府重建、跨国地产修正、猎寻子个体容量重扫及三个舰种上限属于高风险脚本，已完成静态检查，但仍应按 `docs/TEST_CHECKLIST.md` 在4.4.6实机查看日志与数值。原“自动泰坦”舰船方案已由“女仆不受限制”的原版舰种上限科技取代。

## 兼容性

模组不使用 `replace_path`，不修改传统 UI。为限制专属物种，仍以相同键值最小覆写原版 `bio_trophy` 与 `citizenship_organic_trophy`；修改相同定义的模组可能冲突。

“多彩乌托邦丨Colourful Slave Utopia”也定义了 `citizenship_organic_trophy`，请将本模组排在它之后。Tradition UI 与 255/256 槽位模组可保持原顺序。

## 安装与验证

将 `rogue_servitor_enhanced_v2` 复制至：

`Documents/Paradox Interactive/Stellaris/mod/rogue_servitor_enhanced_v2`

再把 `launcher/rogue_servitor_enhanced_v2.mod` 复制至 `Documents/Paradox Interactive/Stellaris/mod/`。不要同时启用 V1 或原型测试模组。

静态验证：

`powershell -ExecutionPolicy Bypass -File .\tools\validate_mod.ps1`

游戏内流程与控制台指令见 `docs/TEST_CHECKLIST.md`。本项目不会自动执行 GitHub push。
